[SRM-73][SRM-19] Use DataTables on trade history table. More DataTable styling. Switch RPC to GenesysGo.